# rdk_platform_inferer

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: auto-approval.yaml  auto-create-pr.yaml  ci.yaml  lint.yaml  linter.yaml
assets/: example.yaml  model.onnx
cmake/: mingw64.cmake
rdk_platform_inferer/include/cc/neolux/algo/rdk_platform_inferer/: processing.hpp  rdk_platform_inferer.h  rdk_platform_inferer.hpp
rdk_platform_inferer/include/cc/neolux/pseudomano/rdk_platform_inferer/: rdk_platform_inferer.hpp
rdk_platform_inferer/include/cc/neolux/pseudomano/utils/: parser.hpp
rdk_platform_inferer/src/: main.cpp  parser.cpp  post_proc.cpp  pre_proc.cpp  rdk_platform_inferer.cpp
